[package]
name = "s2n-netbench-driver-boringssl"
version = "0.1.0"
authors = ["AWS s2n"]
description = "s2n-netbench driver for Boringssl with post-quantum support"
repository = "https://github.com/aws/s2n-netbench"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
netbench = { version = "0.1", path = "../netbench", package = "s2n-netbench" }
netbench-driver = { version = "0.1", path = "../netbench-driver", package = "s2n-netbench-driver" }
tokio = { version = "1", features = ["io-util", "net", "time", "rt-multi-thread"] }
boring = {version = "4.11.0"}
tokio-boring = {version = "4.11.0"}

[[bin]]
name = "s2n-netbench-driver-client-boringssl"
path = "src/bin/client.rs"

[[bin]]
name = "s2n-netbench-driver-server-boringssl"
path = "src/bin/server.rs"
